--- a/Views/admin/products.ejs
+++ b/Views/admin/products.ejs
@@ -4,6 +4,9 @@
 <body>
     <%- include('../includes/navigation.ejs') %>
     <main>
+        <!-- <% if(errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %> -->
         <% if(prods.length > 0) { %>
             <div class="grid">
                 <% for(let product of prods) { %>
@@ -12,7 +15,7 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageURL %>" alt="<%= product.title %>">
+                            <img src="/<%= product.imageURL %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
@@ -20,11 +23,9 @@
                         </div>
                         <div class="card__actions">
                             <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                            <form action="/admin/delete-product" method="POST">
-                                <input type="hidden" value="<%= product._id %>" name="productId">
-                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                <button class="btn" type="submit">Delete</button>
-                            </form>
+                            <input type="hidden" value="<%= product._id %>" name="productId">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
                         </div>
                     </article>
                 <% } %>
@@ -34,3 +35,4 @@
         <% } %>
     </main>
 <%- include('../includes/end.ejs') %>
+<script src="/js/admin.js"></script>
