--- a/Views/shop/index.ejs
+++ b/Views/shop/index.ejs
@@ -12,7 +12,7 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageURL %>" alt="<%= product.title %>">
+                            <img src="/<%= product.imageURL %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
@@ -27,6 +27,7 @@
                     </article>
                 <% } %>
             </div>
+            <%- include('../includes/pagination.ejs'), { currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage} %>
         <% } else { %>
             <h1>No Products!!</h1>
         <% } %>
