--- a/Views/shop/product-details.ejs
+++ b/Views/shop/product-details.ejs
@@ -6,7 +6,7 @@
         <h1><%= product.title %></h1>
         <hr>
         <div>
-            <img src="<%= product.imageURL %>" alt="<%= product.title %>" class="prod-details">
+            <img src="/<%= product.imageURL %>" alt="<%= product.title %>" class="prod-details">
         </div>
         <h2>$<%= product.price %></h2>
         <p><%= product.discription %></p>
